added comments and made layout changes

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
           onclick="game.onToolSelected(event)">
           <img class="toolbar-icon" src="public/icons/road.png">
         </button>
-        <button id='button-pause' class="ui-button" onclick="game.togglePause()">
+        <!-- <button id='button-pause' class="ui-button" onclick="game.togglePause()">
           <img id='pause-button-icon' class="toolbar-icon" src="public/icons/pause.png">
+        </button> -->
+        <button id='button-play' class="ui-button" onclick="game.togglePlay()">
+          <img id='play-button-icon' class="toolbar-icon" src="public/icons/play.png">
         </button>
       </div>
       <div id="info-panel" class="container">
