--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div id="ui">
       <div id="title-bar">
         <div class="title-bar-left-items title-bar-items">
-          Time: xxx
+          <img id="time-elapsed-icon" src="public/icons/time.png">
+          <span id="simulation-time-elapsed">0</span>
         </div>
         <div class="title-bar-center-items title-bar-items">
           SMA test
