added more human models & fixed the animation mixer

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
           <img id='play-button-icon' class="toolbar-icon" src="public/icons/play-color.png">
         </button>
 
+        <button id='button-visitor' class="ui-button" data-type="visitor"
+          onclick="game.onToolSelected(event)">
+          <img class="toolbar-icon" src="public/icons/woman.png">
+        </button>
+
         <button id='button-residential' class="ui-button" data-type="residential"
           onclick="game.onToolSelected(event)">
           <img class="toolbar-icon" src="public/icons/house.png">
