added models for rides and stands

--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
           <img class="toolbar-icon" src="public/icons/woman.png">
         </button>
 
+        <button id='button-ride' class="ui-button" data-type="ride"
+          onclick="game.onToolSelected(event)">
+          <img class="toolbar-icon" src="public/icons/carousel.png">
+        </button>
+
+        <button id='button-stand' class="ui-button" data-type="stand"
+        onclick="game.onToolSelected(event)">
+        <img class="toolbar-icon" src="public/icons/stand.png">
+      </button>
+
         <button id='button-residential' class="ui-button" data-type="residential"
           onclick="game.onToolSelected(event)">
           <img class="toolbar-icon" src="public/icons/house.png">
