--- a/index.html
+++ b/index.html
@@ -1,106 +1,149 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./public/main.css" />
+    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
 
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="./public/main.css">
-  <link rel="icon" type="image/x-icon" href="./public/favicon.ico">
-
-  <!-- Import Three.js library-->
-  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/"
+    <!-- Import Three.js library-->
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
+    ></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/"
+        }
       }
-    }
-  </script>
-</head>
+    </script>
+  </head>
 
-<body>
-  <div id="root-window">
-    <!-- Three.js adds a `canvas` element to this element-->
-    <div id="render-target"></div>
-    <div id="ui">
-      <div id="title-bar">
-        <div class="title-bar-left-items title-bar-items">
-          <img id="time-elapsed-icon" src="public/icons/time.png">
-          <span id="simulation-time-elapsed">0</span>
+  <body>
+    <div id="root-window">
+      <!-- Three.js adds a `canvas` element to this element-->
+      <div id="render-target"></div>
+      <div id="ui">
+        <div id="title-bar">
+          <div class="title-bar-left-items title-bar-items">
+            <img id="time-elapsed-icon" src="public/icons/time.png" />
+            <span id="simulation-time-elapsed">0</span>
+          </div>
+          <div class="title-bar-center-items title-bar-items">SMA test</div>
+          <div class="title-bar-right-items title-bar-items">
+            <img id="population-icon" src="public/icons/person.png" />
+            <span id="population-counter">0</span>
+          </div>
         </div>
-        <div class="title-bar-center-items title-bar-items">
-          SMA test
-        </div>
-        <div class="title-bar-right-items title-bar-items">
-          <img id="population-icon" src="public/icons/person.png">
-          <span id="population-counter">0</span>
-        </div>
-      </div>
-      <div id="ui-toolbar" class="container">
-        <button id='button-select' class="ui-button selected" data-type="select"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/select-color.png">
-        </button>
-        <button id='button-bulldoze' class="ui-button" data-type="bulldoze"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/bulldozer-color.png">
-        </button>
-        <button id='button-road' class="ui-button" data-type="road"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/road-color.png">
-        </button>
-        <!-- <button id='button-pause' class="ui-button" onclick="game.togglePause()">
+        <div id="ui-toolbar" class="container">
+          <button
+            id="button-select"
+            class="ui-button selected"
+            data-type="select"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/select-color.png" />
+          </button>
+          <button
+            id="button-bulldoze"
+            class="ui-button"
+            data-type="bulldoze"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/bulldozer-color.png" />
+          </button>
+          <button
+            id="button-road"
+            class="ui-button"
+            data-type="road"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/road-color.png" />
+          </button>
+          <!-- <button id='button-pause' class="ui-button" onclick="game.togglePause()">
           <img id='pause-button-icon' class="toolbar-icon" src="public/icons/pause.png">
         </button> -->
-        <button id='button-play' class="ui-button" onclick="game.togglePlay()">
-          <img id='play-button-icon' class="toolbar-icon" src="public/icons/play-color.png">
-        </button>
+          <button
+            id="button-play"
+            class="ui-button"
+            onclick="game.togglePlay()"
+          >
+            <img
+              id="play-button-icon"
+              class="toolbar-icon"
+              src="public/icons/play-color.png"
+            />
+          </button>
 
-        <button id='button-visitor' class="ui-button" data-type="visitor"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/woman.png">
-        </button>
+          <button
+            id="button-visitor"
+            class="ui-button"
+            data-type="visitor"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/woman.png" />
+          </button>
 
-        <button id='button-ride' class="ui-button" data-type="ride"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/carousel.png">
-        </button>
+          <button
+            id="button-ride"
+            class="ui-button"
+            data-type="ride"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/carousel.png" />
+          </button>
 
-        <button id='button-stand' class="ui-button" data-type="stand"
-        onclick="game.onToolSelected(event)">
-        <img class="toolbar-icon" src="public/icons/stand.png">
-      </button>
+          <button
+            id="button-stand"
+            class="ui-button"
+            data-type="stand"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/stand.png" />
+          </button>
 
-        <button id='button-residential' class="ui-button" data-type="residential"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/house.png">
-        </button>
-        <button id='button-commercial' class="ui-button" data-type="commercial"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/office.png">
-        </button>
-        <button id='button-industrial' class="ui-button" data-type="industrial"
-          onclick="game.onToolSelected(event)">
-          <img class="toolbar-icon" src="public/icons/factory.png">
-        </button>
-      </div>
-      <div id="info-panel" class="container">
-        <div class="info-heading" style="margin-top: 0;">
-          <span>INFO</span>
+          <!-- <button
+            id="button-residential"
+            class="ui-button"
+            data-type="residential"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/house.png" />
+          </button>
+          <button
+            id="button-commercial"
+            class="ui-button"
+            data-type="commercial"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/office.png" />
+          </button>
+          <button
+            id="button-industrial"
+            class="ui-button"
+            data-type="industrial"
+            onclick="game.onToolSelected(event)"
+          >
+            <img class="toolbar-icon" src="public/icons/factory.png" />
+          </button> -->
         </div>
-        <div id="info-details"> </div>
+        <div id="info-panel" class="container">
+          <div class="info-heading" style="margin-top: 0">
+            <span>INFO</span>
+          </div>
+          <div id="info-details"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <script type="module">
-    import { Game } from './src/game.js';
-    
-    // Create a new game when the window is loaded
-    window.onload = () => {
-      window.game = new Game();
-    }
-  </script>
-</body>
+    <script type="module">
+      import { Game } from "./src/game.js";
 
+      // Create a new game when the window is loaded
+      window.onload = () => {
+        window.game = new Game();
+      };
+    </script>
+  </body>
 </html>
