added entrance model & edit the spawn logic to only generate from end tile from entrance

--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
             <img class="toolbar-icon" src="public/icons/stand.png" />
           </button>
 
+          <button
+          id="button-entrance"
+          class="ui-button"
+          data-type="entrance"
+          onclick="game.onToolSelected(event)"
+        >
+          <img class="toolbar-icon" src="public/icons/entrance.png" />
+        </button>
+
           <!-- <button
             id="button-residential"
             class="ui-button"
