--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./public/main.css" />
-    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
+    <link rel="icon" type="image/png" href="./public/favicon-32x32.png" />
+    <!-- <link rel="icon" type="image/x-icon" href="./public/favicon_castle.ico" /> -->
 
     <!-- Import Three.js library-->
     <script
