--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="./public/main.css" />
-    <link rel="icon" type="image/png" href="./public/favicon-32x32.png" />
-    <!-- <link rel="icon" type="image/x-icon" href="./public/favicon_castle.ico" /> -->
 
-    <!-- Import Three.js library-->
-    <script
-      async
-      src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
-    ></script>
-    <script type="importmap">
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="./public/main.css" />
+  <link rel="icon" type="image/png" href="./public/favicon-32x32.png" />
+  <!-- <link rel="icon" type="image/x-icon" href="./public/favicon_castle.ico" /> -->
+
+  <!-- Import Three.js library-->
+  <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+  <script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
@@ -19,125 +17,180 @@
         }
       }
     </script>
-  </head>
+</head>
 
-  <body>
-    <div id="root-window">
-      <!-- Three.js adds a `canvas` element to this element-->
-      <div id="render-target"></div>
-      <div id="ui">
-        <div id="title-bar">
-          <div class="title-bar-left-items title-bar-items">
-            <img id="time-elapsed-icon" src="public/icons/time.png" />
-            <span id="simulation-time-elapsed">0</span>
-          </div>
-          <div class="title-bar-center-items title-bar-items">SMA test</div>
-          <div class="title-bar-right-items title-bar-items">
-            <img id="population-icon" src="public/icons/person.png" />
-            <span id="population-counter">0</span>
-          </div>
+<body>
+  <div id="root-window">
+    <!-- Three.js adds a `canvas` element to this element-->
+    <div id="render-target"></div>
+    <div id="ui">
+      <div id="title-bar">
+        <div class="title-bar-left-items title-bar-items">
+          <img id="time-elapsed-icon" src="public/icons/time.png" />
+          <span id="simulation-time-elapsed">0</span>
         </div>
+        <div class="title-bar-center-items title-bar-items">SMA test</div>
+        <div class="title-bar-right-items title-bar-items">
+          <img id="population-icon" src="public/icons/person.png" />
+          <span id="population-counter">0</span>
+        </div>
+      </div>
+
+      <div class="tool-panel">
         <div id="ui-toolbar" class="container">
-          <button
-            id="button-select"
-            class="ui-button selected"
-            data-type="select"
-            onclick="game.onToolSelected(event)"
-          >
+          <button id="button-select" class="ui-button selected" data-type="select" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/select-color.png" />
           </button>
-          <button
-            id="button-bulldoze"
-            class="ui-button"
-            data-type="bulldoze"
-            onclick="game.onToolSelected(event)"
-          >
+          <button id="button-bulldoze" class="ui-button" data-type="bulldoze" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/bulldozer-color.png" />
           </button>
-          <button
-            id="button-road"
-            class="ui-button"
-            data-type="road"
-            onclick="game.onToolSelected(event)"
-          >
+          <button id="button-road" class="ui-button" data-type="road" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/road-color.png" />
           </button>
           <!-- <button id='button-pause' class="ui-button" onclick="game.togglePause()">
-          <img id='pause-button-icon' class="toolbar-icon" src="public/icons/pause.png">
-        </button> -->
-          <button
-            id="button-play"
-            class="ui-button"
-            onclick="game.togglePlay()"
-          >
-            <img
-              id="play-button-icon"
-              class="toolbar-icon"
-              src="public/icons/play-color.png"
-            />
+            <img id='pause-button-icon' class="toolbar-icon" src="public/icons/pause.png">
+          </button> -->
+          <button id="button-play" class="ui-button" onclick="game.togglePlay()">
+            <img id="play-button-icon" class="toolbar-icon" src="public/icons/play-color.png" />
           </button>
 
-          <button
-            id="button-visitor"
-            class="ui-button"
-            data-type="visitor"
-            onclick="game.onToolSelected(event)"
-          >
-            <img class="toolbar-icon" src="public/icons/woman.png" />
+          <button id="button-entrance" class="ui-button" data-type="entrance" onclick="game.onToolSelected(event)">
+            <img class="toolbar-icon" src="public/icons/entrance.png" />
           </button>
 
-          <button
-            id="button-ride"
-            class="ui-button"
-            data-type="ride"
-            onclick="game.onToolSelected(event)"
-          >
+          <button id="button-ride" class="ui-button" data-type="ride" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/carousel.png" />
           </button>
 
-          <button
-            id="button-stand"
-            class="ui-button"
-            data-type="stand"
-            onclick="game.onToolSelected(event)"
-          >
+          <button id="button-stand" class="ui-button" data-type="stand" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/stand.png" />
           </button>
 
-          <button
-          id="button-entrance"
-          class="ui-button"
-          data-type="entrance"
-          onclick="game.onToolSelected(event)"
-        >
-          <img class="toolbar-icon" src="public/icons/entrance.png" />
-        </button>
+          <button id="button-visitor" class="ui-button" data-type="visitor" onclick="game.onToolSelected(event)">
+            <img class="toolbar-icon" src="public/icons/woman.png" />
+          </button>
+
+         
+
+          
 
           <!-- <button
-            id="button-residential"
-            class="ui-button"
-            data-type="residential"
-            onclick="game.onToolSelected(event)"
-          >
-            <img class="toolbar-icon" src="public/icons/house.png" />
-          </button>
-          <button
-            id="button-commercial"
-            class="ui-button"
-            data-type="commercial"
-            onclick="game.onToolSelected(event)"
-          >
-            <img class="toolbar-icon" src="public/icons/office.png" />
-          </button>
-          <button
-            id="button-industrial"
-            class="ui-button"
-            data-type="industrial"
-            onclick="game.onToolSelected(event)"
-          >
-            <img class="toolbar-icon" src="public/icons/factory.png" />
-          </button> -->
+              id="button-residential"
+              class="ui-button"
+              data-type="residential"
+              onclick="game.onToolSelected(event)"
+            >
+              <img class="toolbar-icon" src="public/icons/house.png" />
+            </button>
+            <button
+              id="button-commercial"
+              class="ui-button"
+              data-type="commercial"
+              onclick="game.onToolSelected(event)"
+            >
+              <img class="toolbar-icon" src="public/icons/office.png" />
+            </button>
+            <button
+              id="button-industrial"
+              class="ui-button"
+              data-type="industrial"
+              onclick="game.onToolSelected(event)"
+            >
+              <img class="toolbar-icon" src="public/icons/factory.png" />
+            </button> -->
         </div>
+        <div style="position: relative;">
+
+
+          <div id="ride-tool-kit-list" class="extended-container">
+            <button id="button-circus-tent" class="ui-extended-button" data-type="circus-tent"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/circus-tent.png" />
+            </button>
+
+            <button id="button-water-ride" class="ui-extended-button" data-type="water-ride"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/water-ride.png" />
+            </button>
+
+            <button id="button-bumper-car" class="ui-extended-button" data-type="bumper-car"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/bumper-car.png" />
+            </button>
+
+            <button id="button-ferris-wheel" class="ui-extended-button" data-type="ferris-wheel"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/ferris-wheel.png" />
+            </button>
+
+            <button id="button-roundabout" class="ui-extended-button" data-type="roundabout"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/chair-swing-ride.png" />
+            </button>
+
+            <button id="button-carousel" class="ui-extended-button" data-type="carousel"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/carousel.png" />
+
+            </button>
+
+            <button id="button-swing-claw" class="ui-extended-button" data-type="swing-claw"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/pendulum-ride.png" />
+
+            </button>
+
+            <button id="button-space-adventure" class="ui-extended-button" data-type="space-adventure"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/kiddie-ride.png" />
+
+            </button>
+
+            <button id="button-rollercoaster" class="ui-extended-button" data-type="rollercoaster"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/rollercoaster.png" />
+
+            </button>
+
+            <button id="button-arcade" class="ui-extended-button" data-type="arcade"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/arcade-game.png" />
+
+            </button>
+
+          </div>
+
+          <div id="stand-tool-kit-list" class="extended-container">
+            <button id="button-hot-dog" class="ui-extended-button" data-type="hot-dog"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/hot-dog.png" />
+            </button>
+
+            <button id="button-burger" class="ui-extended-button" data-type="burger"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/cheeseburger.png" />
+            </button>
+
+            <button id="button-cafe" class="ui-extended-button" data-type="cafe" onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/cafe.png" />
+            </button>
+
+            <button id="button-chinese-restaurant" class="ui-extended-button" data-type="chinese-restaurant"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/ramen.png" />
+            </button>
+
+            <button id="button-ice-cream" class="ui-extended-button" data-type="ice-cream"
+              onclick="game.onToolSelected(event)">
+              <img class="toolbar-icon" src="public/icons/extended_bar/ice-cream.png" />
+            </button>
+
+          </div>
+
+        </div>
+
+
+
         <div id="info-panel" class="container">
           <div class="info-heading" style="margin-top: 0">
             <span>INFO</span>
@@ -155,5 +208,6 @@
         window.game = new Game();
       };
     </script>
-  </body>
+</body>
+
 </html>
