--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
         </div>
         <div class="title-bar-center-items title-bar-items">SMA test</div>
         <div class="title-bar-right-items title-bar-items">
-          <img id="population-icon" src="public/icons/person.png" />
-          <span id="population-counter">0</span>
+          <div class="title-bar-right-elements">
+            <img id="cost-icon" src="public/icons/cost.png" />
+            <span id="cost-total">0</span>
+          </div>
+          <div class="title-bar-right-elements">
+            <img id="profit-icon" src="public/icons/profit.png" />
+            <span id="profit-total">0</span>
+          </div>
         </div>
       </div>
 
