added more fields for Ride

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <span id="cost-total">0</span>
           </div>
           <div class="title-bar-right-elements">
-            <img id="profit-icon" src="public/icons/profit.png" />
-            <span id="profit-total">0</span>
+            <img id="revenue-icon" src="public/icons/revenue.png" />
+            <span id="revenue-total">0</span>
           </div>
         </div>
       </div>
