added display of total number of visitors

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
     <div id="ui">
       <div id="title-bar">
         <div class="title-bar-left-items title-bar-items">
-          <img id="time-elapsed-icon" src="public/icons/time.png" />
-          <span id="simulation-time-elapsed">0</span>
+          <div class="title-bar-left-elements">
+            <img id="time-elapsed-icon" src="public/icons/time.png" />
+            <span id="simulation-time-elapsed">0</span>
+          </div>
+          <div class="title-bar-left-elements">
+            <img id="person-icon" src="public/icons/user.png" />
+            <span id="visitor-created-total">0</span>
+          </div>
+          
         </div>
         <div class="title-bar-center-items title-bar-items">SMA test</div>
         <div class="title-bar-right-items title-bar-items">
