implemented angry visitors leave with no tolerance

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <img id="person-icon" src="public/icons/user.png" />
             <span id="visitor-created-total">0</span>
           </div>
+          <div class="title-bar-left-elements">
+            <img id="person-angry-icon" src="public/icons/angry.png" />
+            <span id="visitor-angry-exit-total">0</span>
+          </div>
           
         </div>
         <div class="title-bar-center-items title-bar-items">SMA test</div>
