added setting bar visibility

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div style="position: relative;">
 
-          <div class="setting-input-container">
+          <div id="setting-kit-list" class="setting-input-container">
 
           <!-- visitor setting  -->
           <div style="color: white; font-size: 1.1em; border-bottom: 3px solid white; margin-bottom: 5px;">Visitor setting</div>
