--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <label for="maxVehicleCount" class="setting-label">Max number of visitors in the scene</label>
             </div>
             <div class="setting-item-elements">
-              <input class="setting-input" type="number" id="nammaxVehicleCount" name="maxVehicleCount" required value=20 />
+              <input class="setting-input" type="number" id="maxVehicleCount" name="maxVehicleCount" required value=20 />
             </div>
            </div>
 
