added road tile cost config

--- a/index.html
+++ b/index.html
@@ -101,7 +101,17 @@
           <!-- visitor setting  -->
           <div style="color: white; font-size: 1.1em; border-bottom: 3px solid white; margin-bottom: 5px;">Visitor setting</div>
           
-          <!-- nammaxVehicleCount -->
+          <!-- cost per road tile  -->
+          <div class="setting-item">
+            <div class="setting-item-elements">
+              <label for="costPerTile" class="setting-label">Cost per road tile</label>
+            </div>
+            <div class="setting-item-elements">
+              <input class="setting-input" type="number" id="costPerTile" name="costPerTile" required value=60 />
+            </div>
+           </div>
+
+          <!-- maxVehicleCount -->
            <div class="setting-item">
             <div class="setting-item-elements">
               <label for="maxVehicleCount" class="setting-label">Max number of visitors in the scene</label>
