added road heatmap plot

--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,14 @@
     </div>
 
     <!-- plot section  -->
-    <div id="tester" style="width:600px;height:250px;"></div>
+
+    <div id="tester" style="width:600px;height:250px;margin-top: 30px;align-items: center;"></div>
+    <div style="width:600px;height: 500px;margin-top: 30px;align-items: center; text-align: center; background-color: #FFF3;">
+      <span>Route Heatmap</span>
+      <div id="testHeatmap" style="width:600px;height:450px;align-items: center;">
+      </div>
+    </div>
+
 
     <script src="./src/plotGraph.js"></script>
 
