added fixed cost and variable cost

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
         </div>
         <div class="title-bar-center-items title-bar-items">SMA test</div>
         <div class="title-bar-right-items title-bar-items">
+          
+          <div class="title-bar-right-elements cost-additional-div">
+    
+            <img id="fixed-cost-icon" src="public/icons/fixed-cost.png"/>
+            Fixed cost: 
+            <span id="fixed-cost-total">0</span>
+
+            <br />
+            <img id="variable-cost-icon" src="public/icons/variable-cost.png"/>
+            Operational cost:
+            <span id="variable-cost-total">0</span>
+
+          </div>
           <div class="title-bar-right-elements">
             <img id="cost-icon" src="public/icons/cost.png" />
             <span id="cost-total">0</span>
