implemented realtime plotting

--- a/index.html
+++ b/index.html
@@ -1319,11 +1319,14 @@
 
     <!-- plot section  -->
 
-    <div id="tester" style="width:600px;height:250px;margin-top: 30px;align-items: center;"></div>
-    <div style="width:600px;height: 500px;margin-top: 30px;align-items: center; text-align: center; background-color: #FFF3;">
+    <div class="road-plot-container">
       <span>Route Heatmap</span>
-      <div id="testHeatmap" style="width:600px;height:450px;align-items: center;">
-      </div>
+      <div id="road-tile-heatmap"></div>
+    </div>
+
+    <div class="visitor-plot-container">
+      <span>Visitor Time in Park Histogram</span>
+      <div id="visitor-time-histogram"></div>
     </div>
 
 
