added money spent in park plot & added all visitor trace

--- a/index.html
+++ b/index.html
@@ -1324,10 +1324,18 @@
       <div id="road-tile-heatmap"></div>
     </div>
 
-    <div class="visitor-plot-container">
-      <span>Visitor Time in Park Histogram</span>
-      <div id="visitor-time-histogram"></div>
+    <div class="visitor-all-plots">
+      <div class="visitor-plot-container">
+        <span>Visitor Time in Park Histogram</span>
+        <div id="visitor-time-histogram"></div>
+      </div>
+
+      <div class="visitor-plot-container">
+        <span>Visitor Money Spent in Park Histogram</span>
+        <div id="visitor-money-histogram"></div>
+      </div>
     </div>
+    
 
 
     <script src="./src/plotGraph.js"></script>
