added plot for ride status & fixed plot styling

--- a/index.html
+++ b/index.html
@@ -1335,6 +1335,14 @@
         <div id="visitor-money-histogram"></div>
       </div>
     </div>
+
+    <div class="ride-queue-all-plots">
+      <div class="ride-queue-plot-container">
+        <span>Ride Status Time Series</span>
+        <div id="ride-status-line-chart"></div>
+      </div>
+
+    </div>
     
 
 
