added proportion time busy plot

--- a/index.html
+++ b/index.html
@@ -1342,6 +1342,11 @@
         <div id="ride-status-line-chart"></div>
       </div>
 
+      <div class="ride-queue-plot-container">
+        <span>Long Run Average Proportion of Time Ride Being Busy</span>
+        <div id="ride-busy-bar-chart"></div>
+      </div>
+
     </div>
     
 
