added ride proportion being busy time series

--- a/index.html
+++ b/index.html
@@ -1334,9 +1334,14 @@
         <span>Visitor Money Spent in Park Histogram</span>
         <div id="visitor-money-histogram"></div>
       </div>
+
+      <div class="visitor-plot-container">
+        <span>Visitor Distribution in Park</span>
+        <div id="visitor-distribution-pie-chart"></div>
+      </div>
     </div>
 
-    <div class="ride-queue-all-plots">
+    <div class="ride-status-all-plots">
       <div class="ride-queue-plot-container">
         <span>Ride Status Time Series</span>
         <div id="ride-status-line-chart"></div>
@@ -1347,7 +1352,23 @@
         <div id="ride-busy-bar-chart"></div>
       </div>
 
+      <div class="ride-queue-plot-container">
+        <span>Long Run Average Proportion of Time Ride Being Busy Time Series</span>
+        <div id="ride-busy-line-chart"></div>
+      </div>
+
+      <div class="ride-queue-plot-container">
+        <span>Long Run Average Ride Queue Statistics</span>
+        <div id="ride-queue-bar-chart"></div>
+      </div>
     </div>
+
+    <!-- <div class="ride-queue-all-plots">
+      <div class="ride-queue-plot-container">
+        <span>Long Run Average Ride Queue Statistics</span>
+        <div id="ride-queue-bar-chart"></div>
+      </div>
+    </div> -->
     
 
 
