added visitor distribution pie chart

--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
       </div>
 
       <div class="visitor-plot-container">
-        <span>Visitor Distribution in Park</span>
+        <span>Visitor Distribution in Park <br>(Waiting in Queue / Loaded on Rides/ Travelling)</span>
         <div id="visitor-distribution-pie-chart"></div>
       </div>
     </div>
