added ridership olot

--- a/index.html
+++ b/index.html
@@ -1363,6 +1363,13 @@
       </div>
     </div>
 
+    <div class="ride-revenue-all-plots">
+      <div class="ride-revenue-plot-container">
+        <span>Ride Total Ridership</span>
+        <div id="ride-ridership-bar-chart"></div>
+      </div>
+    </div>
+
     <!-- <div class="ride-queue-all-plots">
       <div class="ride-queue-plot-container">
         <span>Long Run Average Ride Queue Statistics</span>
