added plot for ride revenue and profit

--- a/index.html
+++ b/index.html
@@ -1368,6 +1368,11 @@
         <span>Ride Total Ridership</span>
         <div id="ride-ridership-bar-chart"></div>
       </div>
+
+      <div class="ride-revenue-plot-container">
+        <span>Ride Real-time Revenue & Profit</span>
+        <div id="ride-revenue-profit-bar-chart"></div>
+      </div>
     </div>
 
     <!-- <div class="ride-queue-all-plots">
