added revenue per time plot

--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
       </div>
 
       <div class="ride-queue-plot-container">
-        <span>Long Run Average Proportion of Time Ride Being Busy Time Series</span>
+        <span>Time Average Proportion of Time Ride Being Busy Time Series</span>
         <div id="ride-busy-line-chart"></div>
       </div>
 
@@ -1373,6 +1373,18 @@
         <span>Ride Real-time Revenue & Profit</span>
         <div id="ride-revenue-profit-bar-chart"></div>
       </div>
+
+      <div class="ride-revenue-plot-container">
+        <span>Long Run Average Revenue Per Time</span>
+        <div id="ride-revenue-per-time-bar-chart"></div>
+      </div>
+
+      <div class="ride-queue-plot-container">
+        <span>Time Average Revenue Per Time -- Time Series</span>
+        <div id="ride-revenue-per-time-line-chart"></div>
+      </div>
+
+
     </div>
 
     <!-- <div class="ride-queue-all-plots">
