added operational profit plot & fixed styling

--- a/index.html
+++ b/index.html
@@ -1378,7 +1378,7 @@
       </div>
 
       <div class="ride-revenue-plot-container">
-        <span>Long Run Average Revenue Per Time</span>
+        <span>Long Run Average Revenue & Revenue Adjusted for Operational Cost (Operational Profit) Per Time</span>
         <div id="ride-revenue-per-time-bar-chart"></div>
       </div>
 
@@ -1387,6 +1387,10 @@
         <div id="ride-revenue-per-time-line-chart"></div>
       </div>
 
+      <div class="ride-queue-plot-container">
+        <span>Time Average Revenue Adjusted for Operational Cost (Operational Profit) Per Time-- Time Series</span>
+        <div id="ride-profit-per-time-line-chart"></div>
+      </div>
 
     </div>
 
