added stand statistics

--- a/index.html
+++ b/index.html
@@ -1322,11 +1322,13 @@
 
     <!-- plot section  -->
 
+    <!-- whole park plot  -->
     <div class="road-plot-container">
       <span>Route Heatmap</span>
       <div id="road-tile-heatmap"></div>
     </div>
 
+    <!-- visitor plot  -->
     <div class="visitor-all-plots">
       <div class="visitor-plot-container">
         <span>Visitor Time in Park Histogram</span>
@@ -1344,6 +1346,7 @@
       </div>
     </div>
 
+    <!-- ride plot  -->
     <div class="ride-status-all-plots">
       <div class="ride-queue-plot-container">
         <span>Ride Status Time Series</span>
@@ -1394,12 +1397,12 @@
 
     </div>
 
-    <!-- <div class="ride-queue-all-plots">
-      <div class="ride-queue-plot-container">
-        <span>Long Run Average Ride Queue Statistics</span>
-        <div id="ride-queue-bar-chart"></div>
+    <div class="stand-all-plots">
+      <div class="stand-plot-container">
+        <span>Stand Total Customer Traffic</span>
+        <div id="stand-traffic-bar-chart"></div>
       </div>
-    </div> -->
+    </div>
     
 
 
