added long run loaded visitor for stand

--- a/index.html
+++ b/index.html
@@ -1402,6 +1402,11 @@
         <span>Stand Total Customer Traffic</span>
         <div id="stand-traffic-bar-chart"></div>
       </div>
+
+      <div class="stand-plot-container">
+        <span>Long Run Average Stand Loaded Visitors</span>
+        <div id="stand-loaded-bar-chart"></div>
+      </div>
     </div>
     
 
