--- a/index.html
+++ b/index.html
@@ -1407,6 +1407,21 @@
         <span>Long Run Average Stand Loaded Visitors</span>
         <div id="stand-loaded-bar-chart"></div>
       </div>
+
+      <div class="stand-plot-container">
+        <span>Long Run Average Revenue & Revenue Adjusted for Operational Cost (Operational Profit) Per Time</span>
+        <div id="stand-revenue-per-time-bar-chart"></div>
+      </div>
+
+      <div class="stand-plot-container">
+        <span>Time Average Revenue Per Time -- Time Series</span>
+        <div id="stand-revenue-per-time-line-chart"></div>
+      </div>
+
+      <div class="stand-plot-container">
+        <span>Time Average Revenue Adjusted for Operational Cost (Operational Profit) Per Time-- Time Series</span>
+        <div id="stand-profit-per-time-line-chart"></div>
+      </div>
     </div>
     
 
