added whole park revenue and operation profit

--- a/index.html
+++ b/index.html
@@ -1323,10 +1323,19 @@
     <!-- plot section  -->
 
     <!-- whole park plot  -->
-    <div class="road-plot-container">
-      <span>Route Heatmap</span>
-      <div id="road-tile-heatmap"></div>
+    <div class="park-all-plots">
+      <div class="park-plot-container">
+        <span>Route Heatmap</span>
+        <div id="road-tile-heatmap"></div>
+      </div>
+
+      <!-- revenue & operatonal profit for all rides / all stands/ whole park  -->
+      <div class="park-plot-container">
+        <span>Long Run Average Revenue & Revenue Adjusted for Operational Cost (Operational Profit) Per Time</span>
+        <div id="park-revenue-profit-per-time-bar-chart"></div>
+      </div>
     </div>
+
 
     <!-- visitor plot  -->
     <div class="visitor-all-plots">
