added breakeven time

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
           
         </div>
-        <div class="title-bar-center-items title-bar-items">SMA test</div>
+        <div class="title-bar-center-items title-bar-items" style="font-family: Arial Rounded MT Bold, sans-serif;">AmuseCraft World</div>
         <div class="title-bar-right-items title-bar-items">
           
           <div class="title-bar-right-elements cost-additional-div">
@@ -1333,6 +1333,11 @@
       <div class="park-plot-container">
         <span>Long Run Average Revenue & Revenue Adjusted for Operational Cost (Operational Profit) Per Time</span>
         <div id="park-revenue-profit-per-time-bar-chart"></div>
+      </div>
+
+      <div class="park-plot-container">
+        <span>Expected Break-Even Time to Cover Fixed Costs</span>
+        <div id="break-even-time">NaN</div>
       </div>
     </div>
 
