conclude the code part!

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <img class="toolbar-icon" src="public/icons/visualise.png" />
           </button>
 
-          <button id="button-download" class="ui-button" data-type="download" onclick="game.onToolSelected(event)">
+          <!-- <button id="button-download" class="ui-button" data-type="download" onclick="game.onToolSelected(event)">
             <img class="toolbar-icon" src="public/icons/folder.png" />
-          </button>
+          </button> -->
           
 
           <!-- <button id="button-visitor" class="ui-button" data-type="visitor" onclick="game.onToolSelected(event)">
