--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 
   <!-- Import Three.js library-->
   <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-  <script type="importmap">
+  <!-- <script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@v0.153.0/build/three.module.js",
           "three/addons/": "https://unpkg.com/three@v0.153.0/examples/jsm/"
         }
       }
+  </script> -->
+
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@v0.153.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.153.0/examples/jsm/"
+      }
+    }
   </script>
+
   <script src="https://cdn.plot.ly/plotly-2.30.0.min.js" charset="utf-8"></script>
   
 </head>
